--- a/uj/zajecia/24-25l/mkmb/class/11/index.html
+++ b/uj/zajecia/24-25l/mkmb/class/11/index.html
@@ -42,8 +42,17 @@
 <h3>번역</h3>
 
 <p>0-1. 외국인 혐오, 대한민국의 외교·경제를 좀먹는다</p>
+<ul>
+	<li>Anti-foreigner hate undermines South Korean diplomacy and economy</li>
+</ul>
 <p>0-2. UN·국제사회, 한국 사회 인종차별 우려 공식 표명</p>
+<ul>
+	<li>Concerns over racism in South Korean Society officially expressed by the UN and the international community.</li>
+</ul>
 <p>0-3. “혐오·배제, 외교·경제·사회적 손실만 남긴다” 전문가 경고</p>
+<ul>
+	<li>Experts warn that “hate and exclusion only lead to diplomatic and economic losses, and social issues”.</li>
+</ul>
 
 <h3>어휘</h3>
 
@@ -66,9 +75,21 @@
 <h3>번역</h3>
 
 <p>1. ‘혐오’는 ‘몹시 싫어하고 미워함’을 뜻한다.</p>
+<ul>
+	<li>“Hate” means “disliking someone or something very much”.</li>
+</ul>
 <p>2. 이제 이 감정은 단순한 정서를 넘어 일상의 언어이자 놀이처럼 소비되는 시대가 됐다.</p>
+<ul>
+	<li>Nowadays, the feeling has gone beyond just a simple sentiment, and we live in times, where hate is both a part of everyday life and treated as something fun.
+</ul>
 <p>3. 조롱은 ‘밈’이 되고, 차별은 유머로 포장된다.</p>
+<ul>
+	<li>Mockery becomes a “meme”, and discrimination is wrapped with humour.</li>
+</ul>
 <p>4. 그러나 그 웃음 뒤에는 민주주의의 기반을 좀먹는 독성이 자리한다.</p>
+<ul>
+	<li>However, beyond the laughter lies poison, which eats the foundation of democracy.</li>
+</ul>
 
 <h3>어휘</h3>
 
@@ -92,9 +113,21 @@
 <h3>번역</h3>
 
 <p>5-1. 2025년 조기 대선을 앞두고 정치·사회 갈등이 격화되며,</p>
+<ul>
+	<li>As the early 2025 presidential election approaches and political and social conflicts intensify,</li>
+</ul>
 <p>5-2. 최근 국내에서 ‘외국인 혐오’ 정서가 빠르게 확산되고 있다.</p>
+<ul>
+	<li>the sentiment of anti-foreigner hate is spreading quickly in South Korea.</li>
+</ul>
 <p>6-1. 일부 중국인 강력범죄 보도가 연달아 나오면서</p>
+<ul>
+	<li>With reports about a number of violent crimes committed by Chinese citizens have been published one after another,</li>
+</ul>
 <p>6-2. 온라인 커뮤니티와 SNS에는 ‘혐중’ 감정이 노골적으로 표출되고 있다.</p>
+<ul>
+	<li>the anti-Chinese sentiment is expressed openly on online forums and social media.</li>
+</ul>
 
 <h3>어휘</h3>
 
@@ -126,9 +159,21 @@
 <h3>번역</h3>
 
 <p>7. 최근 경찰 등에 따르면, 중국 국적 시민들의 범죄가 연이어 발생했다.</p>
+<ul>
+	<li>Recently, according to the police, there have been repeated crimes committed by Chinese nationals living in Korea.</li>
+</ul>
 <p>8-1. 경기 화성시에서는 시민들에게 흉기 난동을 벌인 중국 국적의 40대 남성이 구속됐고,</p>
+<ul>
+	<li>In Hwaseong city in Gyeonggi Province, a Chinese man in his 40s was detained for blindly attacking citizens with a deadly weapon,</li>
+</ul>
 <p>8-2. 시흥시에서는 2명을 둔기로 살해하고 편의점주와 집 건물주 등 2명을 흉기로 찔러 다치게 한 중국 국적 차철남(57)씨가 긴급 체포됐다.</p>
+<ul>
+	<li>and in Siheung city, Cha Cheolnam (57), a Chinese national, was arrested without warrant for killing two citizens with a blunt weapon and hurting a convenience store and another building owner with a deadly weapon.</li>
+</ul>
 <p>9. 이처럼 강력범죄 보도가 이어지면서, 포털·SNS에는 “중국인 추방”, “외국인 범죄자 무관용” 등 집단 혐오성 발언이 쉽게 노출된다.</p>
+<ul>
+	<li>As the reports about violent crimes continue, at news portals and on social media, hateful comments targeted at specific groups with slogans, such as "Deport the Chinese" or "No tolerance for foreign criminals", can be found easily.</li>
+</ul>
 
 <h3>어휘</h3>
 
@@ -156,8 +201,19 @@
 <h3>번역</h3>
 
 <p>10. 그러나 혐오의 화살은 곧장 ‘외국인 전체’로 번진다.</p>
+<ul>
+	<li>However, the target of the hate has soon extended to all foreigners.</li>
+</ul>
 <p>11. 실제로 베트남, 필리핀, 몽골 등 다양한 출신의 외국인 이주민과 노동자, 귀화자와 다문화 가정 자녀들까지 혐오의 표적이 되고 있다.</p>
+<ul>
+	<li>In fact, foreign migrants and labourers from various countries, such as Vietnam, the Philippines, and Mongolia, naturalised citizens, and even children from multicultural families are becoming its targets.</li>
+</ul>
 <p>12. 각 지역 이주민 커뮤니티에서는 “범죄와 무관한 선량한 외국인, 다문화 가정마저 위협을 느낀다”는 목소리가 잇따른다.</p>
+<ul>
+	<li>In local immigrant communities, voices about "law-abiding foreigners with no connection to the crimes and even multicultural families feeling threatened" have been raised.</li>
+</ul>
+
+<h2 class="homework">숙제</h2>
 
 <h3>어휘</h3>
 
@@ -180,8 +236,22 @@
 <h3>번역</h3>
 
 <p>13-1. 서울 구로구 대림동에서 식당을 운영하는 황모 씨(46, 귀화 중국동포)는</p>
+<ul>
+	<li>Mr. Hwang (46, naturalized Chinese Korean) who runs a restaurant in Daelim-dong, Guro-gu, Seoul</li>
+	<li>Mr. Hwang (46, a naturalized Korean of Chinese origin) runs a restaurant in Daerim-Dong, Ruro-Gu, Seoul.</li>
+</ul>
 <p>13-2. “경찰과 자치구 협조로 외국인 자율방범대를 꾸려도, 일부 범죄 보도 하나면 수년의 노력이 수포로 돌아간다”며</p>
+<ul>
+	<li>said that “Even if a foreign autonomous defense team is set up in cooperation with the police and autonomous districts, years of efforts will come to nothing with some reports of crimes,"</li>
+	<li>He spoke his mind that "Even if we organize a foreigner Citizen Patrol Corps for Voluntary Crime Prevention with the police and the local district office, just one report of a crime can undo years of effort,"</li>
+</ul>
 <p>13-3. “혐오가 중국인을 넘어 전체 외국인에 대한 경계와 배척으로 번지는 분위기”라고 토로했다.</p>
+<ul>
+	<li>“It is an atmosphere in which hatred spreads beyond the Chinese to alert and ostracize all foreigners" he added.</li>
+	<li>“and, the hatred is spreading beyond Chinese people to a general atmosphere of suspicion and exclusion toward all foreigners."</li>
+</ul>
+
+<hr class="homework">
 
 <h3>어휘</h3>
 
