--- a/uj/zajecia/24-25l/mkmb/class/5/index.html
+++ b/uj/zajecia/24-25l/mkmb/class/5/index.html
@@ -250,6 +250,8 @@
 	<li>This has been pointed out as the reason for high obesity rates among teenage girls, and health problems of women who lose weight after their twenties.</li>
 </ul>
 
+<h2 class="homework">숙제</h2>
+
 <h3>어휘</h3>
 
 <ul>
@@ -273,10 +275,62 @@
 <h3>번역</h3>
 
 <p>23-1. 황선환 서울시립대 스포츠과학과 교수는 “생활체육에서도 소득수준에 따른 경비 지출의 양극화 현상이 두드러지게 나타나고 있다”며</p>
+<ul>
+	<li>Hwang Sun-hwan, a professor of sports science at University of Seoul, said, "The polarization of expenditure according to income level is also noticeable in sports." And he emphasized that</li>
+	<li>Professor Hwang Seon-hwan of the University of Seoul's Department of Sports Science said, "Even in recreational sports, the polarization phenomenon in expenditure according to income level is becoming prominently apparent,"</li>
+	<li>Professor Hwang Sun-hwan from the Department of Sports Science at the University of Seoul said ‘A clear polarization in spending on daily exercising based on income level is also emerging’.</li>
+	<li>Hwang SunHwan, a professor from the Department of Sports Science at University of Seoul, stated that ‘the phenomenon of polarization in expenses on sport activities depending on the level of income is noticeable’,</li>
+	<li>Professor Hwang Sun-Hwan of sports science at University of Seoul said: “Even in everyday exercise</li>
+	<li>Professor Hwang Sun-hwan from the Department of Sports Science at the University of Seoul stated, “In recreational sports as well, the polarization of spending based on income levels is becoming increasingly evident.”</li>
+	<li>Hwang Sun-hwan, a professor of the department of sports science at University of Seoul, said, “In daily activities, the phenomenon of polarization in spending depending on income level is becoming noticeable.”</li>
+	<li>Professor Hwang Sunhwan from University of Seoul’s Department of Sports Science said “Even in spendings on daily exercises you can clearly see a polarization phenomenon based on income”</li>
+</ul>
 <p>23-2. “저소득층의 생활체육 참여 기회를 높이기 위한 방안을 모색해야 할 필요가 있다”고 강조했다.</p>
+<ul>
+	<li>"There is a need to find ways to increase opportunities for low-income families to participate in sports."</li>
+	<li>"There is a need to seek measures to increase participation opportunities in recreational sports for low-income groups," he emphasized.</li>
+	<li>He emphasized the need to seek ways to increase opportunities for low-income groups to participate in exercising.</li>
+	<li>and emphasized that ‘we need to find ways to increase opportunities  for those with low income to participate in sport activities’.</li>
+	<li>“We need to find a way to increase opportunities for low-income group to participate in exercising” he emphasized.</li>
+	<li>He emphasized, “We need to explore ways to increase opportunities for low-income groups to participate in recreational sports.”</li>
+	<li>and emphasized that “There is a need to find ways to increase opportunities for low-income group to participate in sports.”</li>
+	<li>And he emphasised “There is a need to find a way to increase opportunities for low income groups to participate in exercises”</li>
+</ul>
 <p>24-1. 황 교수는 또 “국민들의 신체적, 정서적 건강 증진을 위해</p>
+<ul>
+	<li>Professor Hwang also added , "In order to promote the physical and emotional health of the people</li>
+	<li>Professor Hwang also added, "For the improvement of citizens' physical and emotional health,</li>
+	<li>Professor Hwang also added ‘To improve the public’s physical and emotional well-being,</li>
+	<li>Professor Hwang also added, ‘In order to improve physical and emotional well-being of Koreans</li>
+	<li>Professor Hwang also said: “To improve physical and emotional health of people</li>
+	<li>He further added, “To promote the physical and emotional well-being of the public,</li>
+	<li>Professor Hwang also added, “In order to improve physical and emotional health of the people,</li>
+	<li>Professor Hwang added “To improve everyone’s physical and emotional health</li>
+</ul>
 <p>24-2. 실태조사를 바탕으로 한 생활체육 선호도를 파악하고,</p>
+<ul>
+	<li>it is necessary to grasp the preference for all sports based on the survey</li>
+	<li>we need to identify recreational sports preferences based on surveys of actual conditions,</li>
+	<li>we need to identify preferences in daily exercising based on thorough research into the currently reality</li>
+	<li>we need to identify exercise preferences based on surveys,</li>
+	<li>we need to understand the preference for workouts based on a survey,</li>
+	<li>we need to understand people’s preferences in recreational sports based on actual survey data,</li>
+	<li>we need to identify preferences for daily activity based on a fact-finding survey</li>
+	<li>we need to figure out preferences for daily exercises by conducting actual surveys</li>
+</ul>
 <p>24-3. 생활체육 인프라를 갖춰가야 할 것”이라고 덧붙였다.</p>
+<ul>
+	<li>and establish the infrastructure for all sports."</li>
+	<li>and develop recreational sports infrastructure."</li>
+	<li>and work on building a solid infrastructure for daily sports’.</li>
+	<li>and prepare necessary infastructure’.</li>
+	<li>we would prepare sports infrastructure” he added.</li>
+	<li>and work on building the necessary infrastructure.”</li>
+	<li>and prepare the infrastructure for it.”</li>
+	<li>and prepare appropriate infrastructures”</li>
+</ul>
+
+<hr class="homework">
 
 <h2>Source:</h2>
 
