--- a/uj/zajecia/24-25l/mkmb/class/6/index.html
+++ b/uj/zajecia/24-25l/mkmb/class/6/index.html
@@ -288,6 +288,8 @@
 	<li>Recently, Google has yet again made a request to the National Geographic Information Institute for a transfer of high precision map data of a scale of 1:5000.</li>
 </ul>
 
+<h2 class="homework">숙제</h2>
+
 <h3>어휘</h3>
 
 <ul>
@@ -302,9 +304,44 @@
 <h3>번역</h3>
 
 <p>23-1. 국토지리정보원은 네이버, 카카오, 티맵모빌리티 등 국내 지도 서비스 관련 기업에</p>
+<ul>
+	<li>The Korea Geographic Information Service has provided support to companies related to domestic map services such as Naver, Kakao, T-map Mobility, and others</li>
+	<li>The National Geographic Information Institute is gathering opinions from domestic map service-related companies such as Naver, Kakao, and TMAP Mobility</li>
+	<li>The National Geographic Information Institute has contacted domestic map services such as Naver, Kakao and TMAP Mobility</li>
+	<li>National Geographic Information Institute is collecting opinions from domestic map service companies, Naver, kakao, and T-map Mobility</li>
+	<li>The National Geographic Information Institute is gathering opinions from local map service companies like Naver, Kakao, and Tmap Mobility</li>
+	<li>The National Geographic Information Institute is collecting opinions from domestic map service companies, such as Naver, Kakao, and Tmap Mobility,</li>
+</ul>
 <p>23-2. 구글 고정밀 지도 해외 반출에 대한 의견을 수렴하고 있다.</p>
+<ul>
+	<li>They are collecting opinions on exporting high-precision Google maps overseas.</li>
+	<li>regarding Google's export of high-precision maps abroad.</li>
+	<li>to collect opinions regarding the overseas export of Google’s high-precision maps.</li>
+	<li>on regarding google’s exporting of high-precision map data</li>
+	<li>about Google’s plan to export its high-precision maps overseas.</li>
+	<li>about the overseas transfer of Google’s high-precision maps.</li>
+	<li>23. The National Geographic Information Institute is gathering opinions from domestic companies related to map services like Naver, Kakao and TMAP Mobility about overseas data transfer for Google’s high-precision maps.</li>
+</ul>
 <p>24-1. 업계·학계에서는 구글이 일부 기능 제공 어려움을 이유로</p>
+<ul>
+	<li>Industry and academia say that Google has difficulty providing some functions</li>
+	<li>Industry and academic experts are opposing this, saying they cannot understand</li>
+	<li>Industry and academia say that Google has difficulty providing some functions</li>
+	<li>Industry and Academia are protesting, Google’s that difficulties in providing some options</li>
+	<li>People in the industry and academia are pushing back,</li>
+</ul>
 <p>24-2. 지도 데이터를 필요한 근거를 대는 데 이해할 수 없다며 반발하고 있다.</p>
+<ul>
+	<li>They are protesting that they cannot understand the map data to provide the necessary basis.</li>
+	<li>Google's justification for map data requirements based on difficulties in providing partial features.</li>
+	<li>so they are protesting that they cannot understand the basis for the map data.</li>
+	<li>or map data is unreasonable fact.</li>
+	<li>saying they don’t really understand why Google is citing difficulties in offering certain features as a reason for needing the map data.</li>
+	<li>24. The industry and academia, however, oppose it as they cannot understand Google citing difficulties in providing certain functions as a justification for needing the map data.</li>
+	<li>24. The industry and academia are opposing, saying they cannot understand Google’s justification for transferring the map data, citing difficulties in providing some features.</li>
+</ul>
+
+<hr class="homework">
 
 <h2>Source:</h2>
 
