--- a/uj/zajecia/24-25l/mkmb/class/8/index.html
+++ b/uj/zajecia/24-25l/mkmb/class/8/index.html
@@ -227,6 +227,8 @@
 	<li>It is also possible that North Korea is going to receive satellites, nuclear submarines, and other advanced military technology from Russia.</li>
 </ul>
 
+<h2 class="homework">숙제</h2>
+
 <h3>어휘</h3>
 
 <ul>
@@ -243,9 +245,43 @@
 <h3>번역</h3>
 
 <p>17-1. 오경섭 통일연구원 연구위원은 “징집된 지 얼마 안 된 병력의 경우</p>
+<ul>
+	<li>"Research Fellow Oh Kyung-sup of the Korea Institute for National Unification said, 'In the case of troops who have been drafted recently,"</li>
+	<li>The researcher at the Korea Institute for National Unification, Oh Kyung-seop, said “In the case of troops who have just enlisted</li>
+	<li>Oh Kyeong-Seob, a research fellow from Korea Institute for National Unification, said, ‘In case of troops who have been recently conscripted to the army,</li>
+	<li>Oh kyoungSeob-Research fellow of Korea Institute for national Unification, said, “in case of that troops have just been conscripted</li>
+	<li>Researcger Oh Gyeong Seob at the Institute for National Unification said „ In the case of troops which were drafted not long time ago</li>
+	<li>Oh Kyung-seop, a researcher at the Korea Institute for National Unification, said,</li>
+</ul>
 <p>17-2. 전장에서 이탈할 가능성이 크지 않고</p>
+<ul>
+	<li>"they are less likely to desert the battlefield"</li>
+	<li>it is not very likely to desert from battlefield</li>
+	<li>the possibility of them deserting from the battlefield is not big</li>
+	<li>There is little chance of deserting the battlefield, and</li>
+	<li>they are not likely to desert the battlefield and</li>
+	<li>“Since these soldiers were drafted not long ago,</li>
+</ul>
 <p>17-3. 상대적으로 통제가 수월한 측면도 있을 것”이라고 말했다.</p>
+<ul>
+	<li>"and they might be relatively easier to control,'"</li>
+	<li>there will also be aspects that are relatively easy to control”.</li>
+	<li>and they may be relatively easy to control’.</li>
+	<li>also aspects of easy to control them.”</li>
+	<li>There is also an aspect of them being relatively easy to control”</li>
+	<li>they’re less likely to desert on the battlefield, and they might also be easier to control.”</li>
+</ul>
 <p>18. 러시아는 이들 북한군을 사실상 ‘총알받이’로 세울 태세다.</p>
+<ul>
+	<li>"Russia is preparing to essentially use these North Korean soldiers as 'cannon fodder.'"</li>
+	<li>Russia is preparing to use these North Korean soldiers as “bullets cannons”.</li>
+	<li>Russia is prepared to use these North Korean soldiers as, in fact, ‘cannon fodder’.</li>
+	<li>Russia is actually preparing to use them as “cannon fodder.”</li>
+	<li>Russia is in reality setting up North Korean troops as a „cannon fodders”.</li>
+	<li>Russia is basically preparing to use these North Korean troops as cannon fodder.</li>
+</ul>
+
+<hr class="homework">
 
 <h3>어휘</h3>
 
