--- a/uj/zajecia/24-25l/mkmb/class/9/index.html
+++ b/uj/zajecia/24-25l/mkmb/class/9/index.html
@@ -240,6 +240,8 @@
 <p>17. 경쟁적으로 매장이 들어서 어디서든 찾을 수 있고 저렴한 가격에 부담 없이 찾는다는 게 청소년들 얘기다.</p>
 <p>18. 커피나 에너지드링크 등 대표적인 고카페인 식품에서 청소년을 보호하겠다는 현행법의 취지가 무색할 정도다.</p>
 
+<h2 class="homework">숙제</h2>
+
 <h3>어휘</h3>
 
 <ul>
@@ -258,10 +260,38 @@
 <h3>번역</h3>
 
 <p>19. 고카페인 음료는 100ml당 카페인 15㎎ 이상을 함유한 음료다.</p>
+<ul>
+	<li>High caffeine drinks contain more than 15mg of caffeine per 100ml.</li>
+	<li>A high caffeine drink is one that contains more than 15mg of caffine per 100ml.</li>
+	<li>High-caffeine beverages are drinks that contain 15 mg or more of caffeine per 100 ml.</li>
+</ul>
 <p>20-1. 식약처에 따르면 청소년 및 어린이는 체중 1㎏당 카페인 2.5㎎ 이하가 최대 섭취 권장량인데</p>
+<ul>
+	<li>According to the Ministry of Food and Drug Safety, the maximum recommended intake for teenagers and children is below 2.5mg  of caffeine per kg of body weight</li>
+	<li>According to the Ministry of Food and Drug Safety that maximum intake for adult and child is 2.5mg or less of caffeine per kg of body weight</li>
+	<li>According to the Ministry of Food and Drug Safety, the maximum recommended caffeine intake for adolescents and children is 2.5 mg per 1 kg of body weight.</li>
+</ul>
 <p>20-2. 몸무게 50㎏ 청소년의 카페인 최대 일일 섭취 권고량은 125㎎이다.</p>
+<ul>
+	<li>the recommended daily intake of caffeine for teenagers who weigh 50 kg is 125 mg</li>
+	<li>The recommended daily intake of caffine for adult weighing 50kg is 123mg.</li>
+	<li>For a teenager weighing 50 kg, the maximum recommended daily caffeine intake is 125 mg.</li>
+</ul>
 <p>21-1. 한 저가 커피 브랜드 홈페이지에 따르면</p>
+<ul>
+	<li>According to a website of a low-cost coffee brand,</li>
+	<li>According to website of a low-cost coffee brand</li>
+	<li>According to the website of a low-cost coffee brand,</li>
+</ul>
 <p>21-2. 20oz(약 600ml)짜리 아이스 아메리카노의 카페인 함유량은 204.2㎎이다.</p>
+<ul>
+	<li>2.20oz (about 600ml) of iced americano has a caffeine content of 204.2 mg.</li>
+	<li>20oz (about 600ml) iced americano contains 204.2mg of caffeine.</li>
+	<li>a 20 oz (about 600 ml) iced Americano contains 204.2 mg of caffeine.</li>
+</ul>
+
+<hr class="homework">
+
 <p>22-1. 상당수 초중고교생으로서는 한 잔만 마셔도
 <p>22-2. 최대 섭취 권장량을 훌쩍 넘기게 되는 것이다.</p>
 
