--- a/uj/zajecia/24-25l/mkmb/class/10/index.html
+++ b/uj/zajecia/24-25l/mkmb/class/10/index.html
@@ -38,9 +38,21 @@
 <h3>번역</h3>
 
 <p>0-1. 문신하셨나요? 가려주세요, 아니면 나가주세요.</p>
+<ul>
+	<li>Do you tattoos? Cover them, or please leave.</li>
+</ul>
 <p>0-2. 과도한 문신에 위화감 호소</p>
+<ul>
+	<li>Complaints over excessive tattoos causing discomfort</li>
+</ul>
 <p>0-3. 헬스·수영장 “가려야 입장”</p>
+<ul>
+	<li>To enter gyms and pools, you must “cover up”.</li>
+</ul>
 <p>0-4. “문신이 있다면 긴옷을 입어주세요.”</p>
+<ul>
+	<li>“If you have tattoos, cover them with clothes”.</li>
+</ul>
 
 <h3>어휘</h3>
 
@@ -61,11 +73,23 @@
 <h3>번역</h3>
 
 <p>1. 서울 역삼동의 한 유명 헬스장이 최근 공지한 ‘노 타투’(No Tatoo) 방침이다.</p>
+<ul>
+	<li>A famous gym in Yeoksam-dong, Seoul, has recently announced a "No Tattoo" policy.</li>
+</ul>
 <p>2-1. 헬스장 특성상 신체 노출이 자유로운데,</p>
 <p>2-2. 팔·다리를 거의 덮는 과도한 문신으로</p>
 <p>2-3. 위화감을 조성하는 회원이 늘었기 때문이다.</p>
+<ul>
+	<li>2. As exposing one's body is common due to the very nature of a gym, more and more members have been causing discomfort due to excessive tattoos almost covering the whole of their arms and legs.</li>
+</ul>
 <p>3-1. 해당 공지가 적힌 입간판 사진이</p>
+<ul>
+	<li>A photo of a sign with the announcement</li>
+</ul>
 <p>3-2. 소셜미디어에서 잇따라 공유되며 화제를 모았다.</p>
+<ul>
+	<li>has been shared on social media repeatedly, becoming a hot topic.</li>
+</ul>
 
 <h3>어휘</h3>
 
@@ -85,11 +109,29 @@
 <h3>번역</h3>
 
 <p>4-1. 이곳 관장은 “요새 본인만의 소중한 의미가 담긴 문신도 많고</p>
+<ul>
+	<li>The owner of the gym said: "These days, there are a lot of tattoos that carry personal meanings,</li>
+</ul>
 <p>4-2. 이는 개성의 표출이라고 생각하지만</p>
+<ul>
+	<li>which I think is an expression of one's individuality,</li>
+</ul>
 <p>5. 소위 ‘건달 문신’은 남이 봤을 때 상당히 위협적”이라고 말했다.</p>
+<ul>
+	<li>yet so called “gangster tattoos” intimidate others to a great extent.</li>
+</ul>
 <p>6. “나의 자유와 권리는 매우 중요합니다.</p>
+<ul>
+	<li>My freedom and rights are very important.</li>
+</ul>
 <p>7. 동시에 타인의 자유와 권리 또한 중요합니다.</p>
+<ul>
+	<li>At the same time, freedom and rights of others are also important.</li>
+</ul>
 <p>8. 이곳은 다중 이용시설입니다.”</p>
+<ul>
+	<li>This place is a public facility”.</li>
+</ul>
 
 <h3>어휘</h3>
 
@@ -111,15 +153,45 @@
 <h3>번역</h3>
 
 <p>9. 文身 대중화에도… “불편해”</p>
+<ul>
+	<li>Despite becoming common, still "uncomfortable"</li>
+</ul>
 <p>10. 문신 인구 1300만명(보건복지부 추산) 시대다.</p>
+<ul>
+	<li>We live in times, where 13 million people have tattoos (as estimated by the South Korean Ministry of Health and Welfare).</li>
+</ul>
 <p>11-1. 문신이 대중적인 패션으로 자리 잡은 지 오래지만,</p>
+<ul>
+	<li>Although tattoos have been around as a popular fashion trend for a long time,</li>
+</ul>
 <p>11-2. 적지 않은 반감 역시 속속 확인되고 있다.</p>
+<ul>
+	<li>there is still quite a bit of hostility towards them.</li>
+</ul>
 <p>12-1. 여론조사기관 한국리서치가 지난 3월</p>
+<ul>
+	<li>Korea Research, an opinion polling institute, in March</li>
+</ul>
 <p>12-2. 전국 만 18세 이상 남녀 1000명을 대상으로 진행한 설문조사에 따르면,</p>
+<ul>
+	<li>conducted a nationwide survey on 1,000 men and women over the age of 18. According to the survey,</li>
+</ul>
 <p>12-3. 문신과 문신한 사람에 대한 인식에서</p>
+<ul>
+	<li>the perception of tattoos and people with tattoos</li>
+</ul>
 <p>12-4. “불량하거나 무섭다”고 답한 비율이 66%를 차지했다.</p>
+<ul>
+	<li>showed that 66% considered them “bad or scary”.</li>
+</ul>
 <p>13. 문신 문화에 개방적인 20·30대에서도 각 58%, 61%로 높은 응답률을 보였다.</p>
+<ul>
+	<li>In the case of those in their 20s and 30s, in spite of being open minded about tattoo culture, they also showed a high respond rate at 58% and 61% respectively.</li>
+</ul>
 <p>14. 심지어 “혐오스럽다”고 답한 비율도 전체의 60%였다.</p>
+<ul>
+	<li>Even the percentage of those who said that tattoos were “disgusting” was at 60%.</li>
+</ul>
 
 <h3>어휘</h3>
 
@@ -149,6 +221,8 @@
 <p>19. 중·고등학생들도 문신에 과감해지고 있다.</p>
 <p>20. 소셜미디어에서 ‘미성년자 타투’를 해시태그로 온라인 모객을 하는 업자들도 있을 정도다.</p>
 
+<h2 class="homework">숙제</h2>
+
 <h3>어휘</h3>
 
 <ul>
@@ -171,10 +245,28 @@
 <h3>번역</h3>
 
 <p>21. ‘문신의 내용’도 과감해지고 있다.</p>
+<ul>
+	<li>The content of tattoos is also becoming bolder.</li>
+</ul>
 <p>22-1. 이름이나 기념일 등의 각인을 넘어</p>
+<ul>
+	<li>Beyond simple engravings of names or anniversaries,</li>
+</ul>
 <p>22-2. 일본 조직 폭력배의 상징 ‘이레즈미’까지 확산하고 있는 것이다.</p>
+<ul>
+	<li>they are expanding to include 'irezumi,' the symbolic tattoos of Japanese organized crime groups.</li>
+</ul>
 <p>23. 용이나 잉어 등의 문양을 몸 전체에 새기는 것이다.</p>
+<ul>
+	<li>This involves carving designs of dragons, carp, and other motifs across the entire body.</li>
+</ul>
 <p>24. 위압감을 과시해 강해 보이려는 욕구가 주된 이유다.</p>
+<ul>
+	<li>The main reason is the desire to display intimidation and appear strong.</li>
+</ul>
+
+<hr class="homework">
+
 <p>25-1. 다만 이레즈미의 원조 일본도 문신이 있으면</p>
 <p>25-2. 온천이나 목욕탕은 출입이 불가하다.</p>
 <p>26. 일종의 주홍글씨인 셈이다.</p>
