--- a/viiilo/zajecia/25-26/jk2/index.html
+++ b/viiilo/zajecia/25-26/jk2/index.html
@@ -58,56 +58,45 @@
 			</tr>
 			<tr>
 				<th scope="row">6</th>
-				<td>2025년 11월 5일</td>
-				<td class="schedule-lecture" colspan="2"></td>
+				<td>2025년 11월 19일</td>
+				<td class="schedule-lecture" colspan="2" rowspan="2"><a href="viiilo/zajecia/25-26/jk2/zajecia/3">9. 공원에서 산책했어요</a></td>
 			</tr>
 			<tr>
 				<th scope="row">7</th>
-				<td>2025년 11월 12일</td>
-				<td class="schedule-lecture" colspan="2"></td>
+				<td>2025년 11월 26일</td>
 			</tr>
 			<tr>
 				<th scope="row">8</th>
-				<td>2025년 11월 19일</td>
-				<td class="schedule-lecture" colspan="2"></td>
-			</tr>
-			<tr>
-				<th scope="row">9</th>
-				<td>2025년 11월 26일</td>
-				<td class="schedule-lecture" colspan="2"></td>
-			</tr>
-			<tr>
-				<th scope="row">10</th>
 				<td>2025년 12월 3일</td>
 				<td class="schedule-lecture" colspan="2"></td>
 			</tr>
 			<tr>
-				<th scope="row">11</th>
+				<th scope="row">9</th>
 				<td>2025년 12월 10일</td>
 				<td class="schedule-lecture" colspan="2"></td>
 			</tr>
 			<tr>
-				<th scope="row">12</th>
+				<th scope="row">10</th>
 				<td>2025년 12월 17일</td>
 				<td class="schedule-lecture" colspan="2"></td>
 			</tr>
 			<tr>
-				<th scope="row">13</th>
+				<th scope="row">11</th>
 				<td>2026년 1월 7일</td>
 				<td class="schedule-lecture" colspan="2"></td>
 			</tr>
 			<tr>
-				<th scope="row">14</th>
+				<th scope="row">12</th>
 				<td>2026년 1월 14일</td>
 				<td class="schedule-lecture" colspan="2"></td>
 			</tr>
 			<tr>
-				<th scope="row">15</th>
+				<th scope="row">13</th>
 				<td>2026년 1월 21일</td>
 				<td class="schedule-lecture" colspan="2"></td>
 			</tr>
 			<tr>
-				<th scope="row">16</th>
+				<th scope="row">14</th>
 				<td>2026년 1월 28일</td>
 				<td class="schedule-lecture" colspan="2"></td>
 			</tr>
