--- a/uj/zajecia/24-25z/assk/index.html
+++ b/uj/zajecia/24-25z/assk/index.html
@@ -113,7 +113,7 @@
 				<th scope="row">3</th>
 				<td>21 października 2024</td>
 				<td class="schedule-lecture">Zajęcia 3</td>
-				<td class="schedule-lecture">literatura</td>
+				<td class="schedule-lecture"><a href="uj/zajecia/24-25z/assk/zajecia/3">literatura</a></td>
 			</tr>
 		</tbody>
 		<tbody>
