--- a/uj/zajecia/24-25z/itas/index.html
+++ b/uj/zajecia/24-25z/itas/index.html
@@ -176,15 +176,15 @@
 			</tr>
 			<tr>
 				<td class="schedule-presentation">Presentation 2</td>
-				<td class="schedule-presentation">Julia Zawierucha</td>
+				<td class="schedule-presentation">Julia Zawierucha - Korean Society Problems Based on K-pop: Education System</td>
 			</tr>
 			<tr>
 				<td class="schedule-presentation">Presentation 3</td>
-				<td class="schedule-presentation">Gabriela Pikus</td>
+				<td class="schedule-presentation">Gabriela Pikus - Feminism in South Korea</td>
 			</tr>
 			<tr>
 				<td class="schedule-presentation">Presentation 4</td>
-				<td class="schedule-presentation">Maja Kruszewska - Challenges of adaptation and integration in the South for North Korean defectors</td>
+				<td class="schedule-presentation">Maja Kruszewska - Challenges of Adaptation and Integration in the South for North Korean Defectors</td>
 			</tr>
 			<tr>
 				<td class="schedule-presentation">Presentation 5</td>
@@ -196,27 +196,27 @@
 				<th scope="row" rowspan="6">12</th>
 				<td rowspan="6">17 January 2025</td>
 				<td class="schedule-presentation">Presentation 6</td>
-				<td class="schedule-presentation">Maria Mądra</td>
+				<td class="schedule-presentation">Maria Mądra - Trot music</td>
 			</tr>
 			<tr>
 				<td class="schedule-presentation">Presentation 7</td>
-				<td class="schedule-presentation">Julia Trzaska</td>
+				<td class="schedule-presentation">Julia Trzaska - Cinematic Activism in South Korea</td>
 			</tr>
 			<tr>
 				<td class="schedule-presentation">Presentation 8</td>
-				<td class="schedule-presentation">Julia Trajdos</td>
+				<td class="schedule-presentation">Julia Trajdos - Presence of Shamanism in South Korea</td>
 			</tr>
 			<tr>
 				<td class="schedule-presentation">Presentation 9</td>
-				<td class="schedule-presentation">Maria Mądra</td>
+				<td class="schedule-presentation">Olga Horwat</td>
 			</tr>
 			<tr>
 				<td class="schedule-presentation">Presentation 10</td>
-				<td class="schedule-presentation">Elżbieta Szymanik</td>
+				<td class="schedule-presentation">Elżbieta Szymanik - Konglish: the Linguistic Fusion Shaping Modern Korea</td>
 			</tr>
 			<tr>
 				<td class="schedule-presentation">Presentation 11</td>
-				<td class="schedule-presentation">Karol Łoś</td>
+				<td class="schedule-presentation">Karol Łoś - Introduction to <i>Pansori</i></td>
 			</tr>
 		</tbody>
 		<tbody>
@@ -224,23 +224,23 @@
 				<th scope="row" rowspan="6">13</th>
 				<td rowspan="6">24 January 2025</td>
 				<td class="schedule-presentation">Presentation 12</td>
-				<td class="schedule-presentation">Agnieszka Mirowska</td>
+				<td class="schedule-presentation">Agnieszka Mirowska - Fascination with Korean Aesthetic Medicine and Related Psycho-social Issues in South Korea</td>
 			</tr>
 			<tr>
 				<td class="schedule-presentation">Presentation 13</td>
-				<td class="schedule-presentation">Edyta Płonka</td>
+				<td class="schedule-presentation">Edyta Płonka - Situation of Women during the Joseon Period</td>
 			</tr>
 			<tr>
 				<td class="schedule-presentation">Presentation 14</td>
-				<td class="schedule-presentation">Karolina Żesławska</td>
+				<td class="schedule-presentation">Karolina Żesławska - Korean Sign Language</td>
 			</tr>
 			<tr>
 				<td class="schedule-presentation">Presentation 15</td>
-				<td class="schedule-presentation">Patrycja Grabowska</td>
+				<td class="schedule-presentation">Patrycja Grabowska - Korean Honorific System and its Importance and Influence on Korean Society</td>
 			</tr>
 			<tr>
 				<td class="schedule-presentation">Presentation 16</td>
-				<td class="schedule-presentation">Apolonia Strugarek</td>
+				<td class="schedule-presentation">Apolonia Strugarek - Korean Wave 3.0</td>
 			</tr>
 			<tr>
 				<td class="schedule-lecture">Lecture (Dr Lee)</td>
@@ -256,11 +256,11 @@
 			</tr>
 			<tr>
 				<td class="schedule-presentation">Presentation 18</td>
-				<td class="schedule-presentation">Karolina Dubert</td>
+				<td class="schedule-presentation">Karolina Dubert - Expectations and Pressure on Women in Korea Nowadays</td>
 			</tr>
 			<tr>
 				<td class="schedule-presentation">Presentation 19</td>
-				<td class="schedule-presentation">Julia Domińska</td>
+				<td class="schedule-presentation">Julia Domińska - Evolution of Neo-Confucianism and its Impact on Contemporary South Korean Society</td>
 			</tr>
 			<tr>
 				<td class="schedule-presentation">Presentation 20</td>
