--- a/uj/zajecia/24-25z/assk/zajecia/2/index.html
+++ b/uj/zajecia/24-25z/assk/zajecia/2/index.html
@@ -16,8 +16,8 @@
 <h2>Malarstwo ludowe (<i>minhwa</i>, 민화, 民畵)</h2>
 
 <ul class="gallery">
-	<li><a class="youtube-thumbnail" href="https://www.youtube-nocookie.com/FonFpaWYal8"><img src="uj/zajecia/24-25z/assk/zajecia/2/img/FonFpaWYal8.webp" alt="Korean Art @ Home MINHWA Episode 1"></a></li>
-	<li><a class="youtube-thumbnail" href="https://www.youtube-nocookie.com/HNCjmQ_I6H0"><img src="uj/zajecia/24-25z/assk/zajecia/2/img/HNCjmQ_I6H0.webp" alt="Korean Art @ Home MINHWA Episode 2"></a></li>
+	<li><a class="youtube-thumbnail" href="https://www.youtube-nocookie.com/embed/FonFpaWYal8"><img src="uj/zajecia/24-25z/assk/zajecia/2/img/FonFpaWYal8.webp" alt="Korean Art @ Home MINHWA Episode 1"></a></li>
+	<li><a class="youtube-thumbnail" href="https://www.youtube-nocookie.com/embed/HNCjmQ_I6H0"><img src="uj/zajecia/24-25z/assk/zajecia/2/img/HNCjmQ_I6H0.webp" alt="Korean Art @ Home MINHWA Episode 2"></a></li>
 </ul>
 
 <h3>kwiaty i ptaki (<i>hwajodo</i>, 화조도, 花鳥圖)</h3>
@@ -59,14 +59,14 @@
 	<li><a href="uj/zajecia/24-25z/assk/zajecia/2/img/호작도9.jpg"><img src="uj/zajecia/24-25z/assk/zajecia/2/img/호작도9.jpg" alt="호작도9"></a></li>
 	<li><a href="uj/zajecia/24-25z/assk/zajecia/2/img/호작도11.jpg"><img src="uj/zajecia/24-25z/assk/zajecia/2/img/호작도11.jpg" alt="호작도11"></a></li>
 	<li><a href="uj/zajecia/24-25z/assk/zajecia/2/img/호작도도안.png"><img src="uj/zajecia/24-25z/assk/zajecia/2/img/호작도도안.png" alt="호작도도안"></a></li>
-	<li><a class="youtube-thumbnail" href="https://www.youtube-nocookie.com/eEYAj1NDFGM"><img src="uj/zajecia/24-25z/assk/zajecia/2/img/eEYAj1NDFGM.webp" alt="민화 호작도/ 2022년은 호랑이해 / 도안 무료 나눔"></a></li>
+	<li><a class="youtube-thumbnail" href="https://www.youtube-nocookie.com/embed/eEYAj1NDFGM"><img src="uj/zajecia/24-25z/assk/zajecia/2/img/eEYAj1NDFGM.webp" alt="민화 호작도/ 2022년은 호랑이해 / 도안 무료 나눔"></a></li>
 </ul>
 
 <h3>pismo (<i>munjado</i>, 문자도, 文字圖)</h3>
 
 <ul>
-	<li>hyojechungsin (효제충신, 孝悌忠信)</li>
-	<li>yeuiyeomchi (예의염치, 禮義廉恥)</li>
+	<li>hyojechungsin (효제충신, 孝悌忠信) - oddanie dla rodziców, szacunek dla rodzeństwa, lojalność dla władcy, zaufanie dla przyjaciół</li>
+	<li>yeuiyeomchi (예의염치, 禮義廉恥) - zasady dobrego wychowania oraz poczucie wstydu</li>
 </ul>
 
 <ul class="gallery">
@@ -108,7 +108,7 @@
 	<li><a href="uj/zajecia/24-25z/assk/zajecia/2/img/풍속화7.jpg"><img src="uj/zajecia/24-25z/assk/zajecia/2/img/풍속화7.jpg" alt="풍속화7"></a></li>
 	<li><a href="uj/zajecia/24-25z/assk/zajecia/2/img/풍속화8.jpg"><img src="uj/zajecia/24-25z/assk/zajecia/2/img/풍속화8.jpg" alt="풍속화8"></a></li>
 	<li><a href="uj/zajecia/24-25z/assk/zajecia/2/img/풍속화9.jpg"><img src="uj/zajecia/24-25z/assk/zajecia/2/img/풍속화9.jpg" alt="풍속화9"></a></li>
-	<li><a href="https://www.youtube-nocookie.com/YQJAHsufayg"><img src="uj/zajecia/24-25z/assk/zajecia/2/img/YQJAHsufayg.webp" alt="Exhibition Online: CLAP IN AWE, Album of Genre Paintings by Kim Hongdo"></a></li>
+	<li><a href="https://www.youtube-nocookie.com/embed/YQJAHsufayg"><img src="uj/zajecia/24-25z/assk/zajecia/2/img/YQJAHsufayg.webp" alt="Exhibition Online: CLAP IN AWE, Album of Genre Paintings by Kim Hongdo"></a></li>
 </ul>
 
 <h2>Konfucjanizm</h2>
