--- a/uj/zajecia/24-25l/ljk5/zajecia/czytanie/1/index.html
+++ b/uj/zajecia/24-25l/ljk5/zajecia/czytanie/1/index.html
@@ -39,7 +39,7 @@
 	<h3>21. (&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;)에 들어갈 말로 가장 알맞은 것을 고르십시오.</h3>
 	<ol>
 		<li>앞뒤를 재어</li>
-		<li>진땀을 흘려</li>
+		<li>진땀을 흘려 <strong class="correct">✓</strong></li>
 		<li>발목을 잡아</li>
 		<li>귀를 기울여</li>
 	</ol>
@@ -48,7 +48,7 @@
 	<ol>
 		<li>디지털 기기는 편리한 생활을 위해 필요하다.</li>
 		<li>운전자에게 내비게이션은 활용도가 매우 높다.</li>
-		<li>스스로 정보를 찾고 기억하려는 노력을 해야 한다.</li>
+		<li>스스로 정보를 찾고 기억하려는 노력을 해야 한다. <strong class="correct">✓</strong></li>
 		<li>내비게이션을 잘 활용하면 기억력 향상에 도움이 된다.</li>
 	</ol>
 </div>
@@ -81,7 +81,7 @@
 	</div>
 	<h3>23. 밑줄 친 부분에 나타난 ‘나’의 심정으로 가장 알맞은 것을 고르십시오.</h3>
 	<ol>
-		<li>답답하다</li>
+		<li>답답하다 <strong class="correct">✓</strong></li>
 		<li>후련하다</li>
 		<li>민망하다</li>
 		<li>번거롭다</li>
@@ -90,7 +90,7 @@
 	<h3>24. 윗글의 내용과 같은 것을 고르십시오.</h3>
 	<ol>
 		<li>할머니께서는 내 말에 자주 귀를 기울이셨다.</li>
-		<li>할머니께서는 시장에 갔다가 다리를 다치셨다.</li>
+		<li>할머니께서는 시장에 갔다가 다리를 다치셨다. <strong class="correct">✓</strong></li>
 		<li>할머니께서는 나에게 온갖 집안일을 시키셨다.</li>
 		<li>할머니께서는 친구를 만나려고 서울에 올라오셨다.</li>
 	</ol>
