--- a/uj/zajecia/24-25l/ljk5/zajecia/tlumaczenie/1/index.html
+++ b/uj/zajecia/24-25l/ljk5/zajecia/tlumaczenie/1/index.html
@@ -50,9 +50,23 @@
 <h3>번역</h3>
 
 <p>0-1. “병원 싫다” 자택서 눈감은 노모, 가족과 대화 속 떠나</p>
+<ul>
+	<li>"Nie chcę do szpitala" - odejście babci w domu wśród najbliższych</li>
+</ul>
 <p>0-2. 존엄사법 7년, 갈길 먼 ‘존엄한 죽음’</p>
+<ul>
+	<li>7 lat ustawy o godnej śmierci – jeszcze daleka droga przed nami</li>
+</ul>
 <p>0-3. 연명치료 중단하고 통증-증상 관리… 가족과 대화 나누며 용서와 화해</p>
+<ul>
+	<li>łagodzenie cierpienia zamiast leczenia przedłużającego życie; przebaczenie i pogodzenie podczas rozmowy z rodziną</li>
+</ul>
 <p>0-4. 노인 68%, 집에서 죽기 원하지만… 낮은 수가-부검 등 이유로 비율 줄어</p>
+	<ul>
+	<li>68% seniorów chce umrzeć w domu – niskie dofinansowanie i obowiązek autopsji powodem spadku tej liczby</li>
+</ul>
+
+<h2 class="homework">숙제</h2>
 
 <h3>어휘</h3>
 
@@ -96,6 +110,9 @@
 <p>1. 고 고옥임 할머니(오른쪽에서 두 번째)가 지난해 자택에서 막내딸 우효순 씨(오른쪽), 외손주들과 함께 웃고 있다.</p>
 <p>2-1. 고 할머니는 생전에 “집에서 살다 떠나고 싶다”는 뜻을 밝혀</p>
 <p>2-2. 연명치료를 중단하고 생의 마지막을 가족들과 함께 집에서 보냈다.</p>
+
+<hr class="homework">
+
 <p>3-1. 지난해 4월 고옥임 할머니(당시 94세)는 화장실에 가다 넘어져 다친 뒤</p>
 <p>3-2. 움직이기 어려워지자 자녀들에게 이같이 말했다.</p>
 <p>4. 낯선 병원보다는 집에서 치료를 받으며 인생의 마지막을 보내겠다는 것이다.</p>
