--- a/uj/zajecia/24-25l/mkmb/class/1/index.html
+++ b/uj/zajecia/24-25l/mkmb/class/1/index.html
@@ -53,11 +53,29 @@
 <h3>번역</h3>
 
 <p>0. "한국 청소년 스마트폰 중독, OECD 국가 1위"</p>
+<ul>
+	<li>Korean teenagers the most addicted to smartphones in OECD</li>
+</ul>
 <p>1. 청소년의 스마트폰 중독이 심할수록 자살위험성이 높아진다.</p>
+<ul>
+	<li>The more addicted to smartphones teenagers are, the higher their risk of suicide.</li>
+</ul>
 <p>2. 특히 수면 장애의 영향력이 크다는 것이 밝혀졌다.</p>
+<ul>
+	<li>In particular, sleep disorder has been discovered to be an important factor.</li>
+</ul>
 <p>3. 지난 16일 오후 6시 연세대학교와 한경국립대학교는 공동 학술포럼을 개최했다.</p>
+<ul>
+	<li>On October 16 at 6 PM, a join academic forum was held by Yonsei University and Hankyong National University.</li>
+</ul>
 <p>4-1. '뉴노멀시대 위기청소년의 실태와 개입방안'을 주제로</p>
+<ul>
+	<li>With “reality of teenagers at risk and intervention measures” as its objective,</li>
+</ul>
 <p>4-2. 위기청소년 통합지원시스템 구축의 필요성을 제시했다.</p>
+<ul>
+	<li>the forum suggested the need to create an integrated support system for those teenagers.</li>
+</ul>
 
 <h3>어휘</h3>
 
@@ -84,11 +102,26 @@
 
 <h3>번역</h3>
 
-<p>5. 특히 이번 학술포럼은 청소년의 스마트폰 과의존, 수면 장애, 폭력피해에 주목했다.</p>
+<p>5. 특히 이번 학술포럼은 청소년의 스마트폰 과의존, 수면 장애, 폭력피해에 주목했다.</p>
+<ul>
+	<li>The academic forum put special focus on their overdependence on smartphones, sleep disorders, and damage caused by violence.</li>
+</ul>
 <p>6. 위기청소년 문제 해결을 위한 정책적 방향성도 논의했다.</p>
+<ul>
+	<li>The participants also debated on possible policy directions in order to solve the problems of teenagers at risk.</li>
+</ul>
 <p>7-1. 연세대학교 사회복지학과 김재엽 교수 연구팀은</p>
+<ul>
+	<li>Professor Kim Jaeyop's research team from the Department of Social Welfare at Yonsei University</li>
+</ul>
 <p>7-2. 전국 중·고교 재학 중인 청소년 1000명을 설문조사했다.</p>
+<ul>
+	<li>conducted a nationwide survey on 1,000 middle and high schoolers.</li>
+</ul>
 <p>8. 이를 토대로 '2024 청소년 생활 실태조사' 연구 결과를 발표했다.</p>
+<ul>
+	<li>They presented the survey results in a “Research on the Lifestyle of Teenagers in 2024”.</li>
+</ul>
 
 <h3>어휘</h3>
 
@@ -107,11 +140,32 @@
 <h3>번역</h3>
 
 <p>9. 연구 결과에 따르면, 청소년들의 스마트폰 일평균 사용 시간은 4.9시간으로 나타났다.</p>
+<ul>
+	<li>According to the research data, the average daily use of smartphones by teenagers is 4.9 hours.</li>
+</ul>
 <p>10. 구체적으로는 중학생 4.8시간, 고등학생 5시간이었다.</p>
-<p>11. 이는 지난 2014년 실태조사 때 2.4시간에 비해 2배 증가한 수치이다.</p>
+<ul>
+	<li>Specifically, middle schoolers use their phones for 4.8 hours, and high schoolers for 5 hours.</li>
+</ul>
+<p>11. 이는 지난 2014년 실태조사 때 2.4시간에 비해 2배 증가한 수치이다.</p>
+<ul>
+	<li>The number has increased two-fold from 2.4 hours reported in a previous research from 2014.</li>
+</ul>
 <p>12. OECD 국가들과 비교하였을 때도 월등히 많이 사용하고 있었다.</p>
+<ul>
+	<li>Even when compared to other OECD countries, Korean teenagers use their phones excessively more.</li>
+</ul>
 <p>13. OECD 국가의 스마트폰 평균 시간은 3.89시간이다.</p>
+<ul>
+	<li>The average smartphone use time in OECD is 3.89 hours.</li>
+</ul>
 <p>14. 즉, 우리나라 청소년들이 OECD 국가 평균 사용 시간보다 1시간이나 더 많이 사용했다.</p>
+<ul>
+	<li>In other words, the time was 1 hour longer than the OECD average.</li>
+</ul>
+
+<h2 class="homework">숙제</h2>
+
 <p>15. 또한 우리나라 청소년들이 OECD 국가 중 가장 많이 사용하는 것으로 나타났다.</p>
 
 <h3>어휘</h3>
@@ -133,6 +187,9 @@
 <p>16. 스마트폰 사용 시간이 늘어날수록 스마트폰 중독 위험도 높아진다.</p>
 <p>17. 본 연구 결과를 보면 스마트폰 중독 청소년은 남자 40.3%, 여자 46.3%로 나타났다.</p>
 <p>18. 다시 말해, 청소년 2명 중 1명은 스마트폰 중독 상태에 있는 것을 의미한다.</p>
+
+<hr class="homework">
+
 <p>19. 스마트폰 중독은 청소년의 수면에도 악영향을 미치는 것으로 나타났다.</p>
 <p>20-1. 대한민국 청소년의 주중 수면 시간은 평균 5.9시간으로</p>
 <p>20-2. 중학생 6.6시간, 고등학생 5.4시간으로 나타났다.</p>
