--- a/uj/zajecia/24-25l/ljk5/index.html
+++ b/uj/zajecia/24-25l/ljk5/index.html
@@ -131,8 +131,8 @@
 				<td class="schedule-exam" colspan="2"><a href="uj/zajecia/24-25l/ljk5/testy/czytanie/1">Kolokwium 1</a></td>
 			</tr>
 			<tr>
-				<td class="schedule-lecture" rowspan="5">Zajęcia</td>
-				<td class="schedule-lecture" rowspan="5"><a href="uj/zajecia/24-25l/ljk5/zajecia/czytanie/2">Arkusz 2</a></td>
+				<td class="schedule-lecture" rowspan="6">Zajęcia</td>
+				<td class="schedule-lecture" rowspan="6"><a href="uj/zajecia/24-25l/ljk5/zajecia/czytanie/2">Arkusz 2</a></td>
 			</tr>
 			<tr>
 				<th scope="row">5</th>
@@ -151,17 +151,17 @@
 				<td>14 maja 2025</td>
 			</tr>
 			<tr>
-				<th scope="row" rowspan="2">9</th>
-				<td rowspan="2">21 maja 2025</td>
+				<th scope="row">9</th>
+				<td>21 maja 2025</td>
+			</tr>
+			<tr>
+				<th scope="row" rowspan="2">10</th>
+				<td rowspan="2">28 maja 2025</td>
 				<td class="schedule-exam" colspan="2"><!--a href="uj/zajecia/24-25l/ljk5/testy/3"-->Kolokwium 2<!--/a--></td>
 			</tr>
 			<tr>
-				<td class="schedule-lecture" rowspan="4">Zajęcia</td>
-				<td class="schedule-lecture" rowspan="4"><!--a href="uj/zajecia/24-25l/ljk5/zajecia/3"-->Arkusz 3<!--/a--></td>
-			</tr>
-			<tr>
-				<th scope="row">10</th>
-				<td>28 maja 2025</td>
+				<td class="schedule-lecture" rowspan="3">Zajęcia</td>
+				<td class="schedule-lecture" rowspan="3"><!--a href="uj/zajecia/24-25l/ljk5/zajecia/3"-->Arkusz 3<!--/a--></td>
 			</tr>
 			<tr>
 				<th scope="row">11</th>
@@ -266,20 +266,21 @@
 				<td class="schedule-presentation"></td>
 			</tr>
 			<tr>
-				<th scope="row" rowspan="2">9</th>
+				<th scope="row">9</th>
+				<td>21 maja 2025</td>
+				<td class="schedule-lecture">Zajęcia</td>
+				<td class="schedule-lecture"></td>
+				<td class="schedule-lecture"></td>
+			</tr>
+			<tr>
+				<th scope="row" rowspan="2">10</th>
 				<td rowspan="2">28 maja 2025</td>
 				<td class="schedule-exam"><!--a href="uj/zajecia/24-25l/ljk5/testy/tlumaczenie/2"-->Kolokwium 2<!--/a--></td>
 				<td class="schedule-exam"></td>
 				<td class="schedule-exam"></td>
 			</tr>
 			<tr>
-				<td class="schedule-lecture" rowspan="3">Zajęcia</td>
-				<td class="schedule-lecture"></td>
-				<td class="schedule-lecture"></td>
-			</tr>
-			<tr>
-				<th scope="row">10</th>
-				<td>21 maja 2025</td>
+				<td class="schedule-lecture" rowspan="2">Zajęcia</td>
 				<td class="schedule-lecture"></td>
 				<td class="schedule-lecture"></td>
 			</tr>
@@ -369,8 +370,6 @@
 				<td>22 maja 2025</td>
 				<td class="schedule-lecture"></td>
 			</tr>
-		</tbody>
-		<tbody>
 			<tr>
 				<th scope="row" rowspan="2">6</th>
 				<td rowspan="2">29 maja 2025</td>
