--- a/uj/zajecia/24-25l/ljk5/zajecia/czytanie/1/index.html
+++ b/uj/zajecia/24-25l/ljk5/zajecia/czytanie/1/index.html
@@ -443,7 +443,7 @@
 	<ol>
 		<li>버섯은 다른 식물이 있어야 자랄 수 있다.</li>
 		<li>나무의 뿌리가 숲에서 하는 기능은 다양하다.</li>
-		<li>버섯은 숲에서 나무들의 정보 교환을 돕는 역할을 한다.</li>
+		<li>버섯은 숲에서 나무들의 정보 교환을 돕는 역할을 한다. <strong class="correct">✓</strong></li>
 		<li>나무의 생활환경에 대한 학자들의 관심이 높아지고 있다.</li>
 	</ol>
 </div>
@@ -475,7 +475,7 @@
 		<li>장기적 남극 연구를 위해 예산 확보가 절실하다.</li>
 		<li>남극 자원 개발이 무분별하게 시행되어서는 안 된다.</li>
 		<li>남극 연구를 위해서는 세계 여러 나라의 협력이 필수적이다.</li>
-		<li>자원 개발과 과학 발전을 위해 남극 연구에 박차를 가해야 한다.</li>
+		<li>자원 개발과 과학 발전을 위해 남극 연구에 박차를 가해야 한다. <strong class="correct">✓</strong></li>
 	</ol>
 </div>
 
@@ -507,7 +507,7 @@
 	<ol>
 		<li>㉠</li>
 		<li>㉡</li>
-		<li>㉢</li>
+		<li>㉢ <strong class="correct">✓</strong></li>
 		<li>㉣</li>
 	</ol>
 </div>
@@ -534,7 +534,7 @@
 	<ol>
 		<li>㉠</li>
 		<li>㉡</li>
-		<li>㉢</li>
+		<li>㉢ <strong class="correct">✓</strong></li>
 		<li>㉣</li>
 	</ol>
 </div>
@@ -570,7 +570,7 @@
 		<li>㉠</li>
 		<li>㉡</li>
 		<li>㉢</li>
-		<li>㉣</li>
+		<li>㉣ <strong class="correct">✓</strong></li>
 	</ol>
 </div>
 
