--- a/uj/zajecia/24-25l/ljk5/zajecia/czytanie/2/index.html
+++ b/uj/zajecia/24-25l/ljk5/zajecia/czytanie/2/index.html
@@ -35,7 +35,7 @@
 	</div>
 	<h3>21. (&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;)에 들어갈 말로 가장 알맞은 것을 고르십시오.</h3>
 	<ol>
-		<li>입 밖에 내지</li>
+		<li>입 밖에 내지 <strong class="correct">✓</strong></li>
 		<li>눈 감아 주지</li>
 		<li>한 술 더 뜨지</li>
 		<li>귓등으로 듣지</li>
@@ -43,7 +43,7 @@
 	<h3>22. 윗글의 내용과 같은 것을 고르십시오.</h3>
 	<ol>
 		<li>감독은 선수가 실수를 반복하지 않도록 지도해야 한다.</li>
-		<li>감독은 선수를 지도할 때 언어를 신중하게 선택해야 한다.</li>
+		<li>감독은 선수를 지도할 때 언어를 신중하게 선택해야 한다. <strong class="correct">✓</strong></li>
 		<li>선수는 넘어져도 몇 번이고 다시 일어나려는 의지가 있어야 한다.</li>
 		<li>선수는 긍정적인 생각을 해서 경기에 대한 부담감을 없애야 한다.</li>
 	</ol>
@@ -75,7 +75,7 @@
 	</div>
 	<h3>23. 밑줄 친 부분에 나타난 ‘나’의 심정으로 가장 알맞은 것을 고르십시오.</h3>
 	<ol>
-		<li>반갑고 감격스럽다</li>
+		<li>반갑고 감격스럽다 <strong class="correct">✓</strong></li>
 		<li>편하고 만족스럽다</li>
 		<li>아쉽고 걱정스럽다</li>
 		<li>기쁘고 자랑스럽다</li>
@@ -85,7 +85,7 @@
 		<li>나는 아버지의 물건을 많이 가지고 있다.</li>
 		<li>나는 전에 아버지의 일기장을 자주 꺼내 읽었다.</li>
 		<li>나는 거실에 아버지의 일기장을 보관하고 있었다.</li>
-		<li>나는 아버지가 자주 가시던 빵집에 가 보려고 한다.</li>
+		<li>나는 아버지가 자주 가시던 빵집에 가 보려고 한다. <strong class="correct">✓</strong></li>
 	</ol>
 </div>
 
@@ -247,83 +247,67 @@
 	</ol>
 </div>
 
-<!-- <div class="exam-question"> -->
-	<!-- <h2>[32~34]. 다음을 읽고 내용이 같은 것을 고르십시오.</h2> -->
-	<!-- <h3>32.</h3> -->
-	<!-- <ul> -->
-		<!-- <li>우주 - kosmos</li> -->
-		<!-- <li>과학 - nauka</li> -->
-		<!-- <li>투자 - inwestycja, inwestowanie</li> -->
-		<!-- <li>바 = 것</li> -->
-		<!-- <li>기여하다 - mieć wkład</li> -->
-		<!-- <li>향하다 - kierować się</li> -->
-		<!-- <li>통신 - komunikacja</li> -->
-		<!-- <li>분야 - sfera</li> -->
-		<!-- <li>우주인 - kosmonauta</li> -->
-		<!-- <li>식수 - woda pitna</li> -->
-		<!-- <li>장치 - urządzenie</li> -->
-		<!-- <li>정수기 - filtr do wody</li> -->
-		<!-- <li>개발하다 - wynaleźć</li> -->
-		<!-- <li>동결 - zamrożenie</li> -->
-		<!-- <li>건조 - wysuszenie</li> -->
-		<!-- <li>일회용 - jednorazowy</li> -->
-		<!-- <li>인류 - ludzkość</li> -->
-		<!-- <li>풍요롭다 - być bogatym (w coś)</li> -->
-	<!-- </ul> -->
-	<!-- <div class="topik-textbox"> -->
-		<!-- <p>흔히 우주 과학은 투자 비용에 비해 우리 생활에 기여하는 바가 적다고 생각한다. 그러나 우주를 향한 인간의 노력은 통신, 의료 등의 분야는 물론이고 일상생활에도 큰 영향을 미쳤다. 우주인의 식수 해결을 위한 장치가 정수기가 되었고, 우주인의 식사용으로 개발된 동결 건조 식품이 물만 넣으면 먹을 수 있는 일회용 국이 되었다. 이렇게 일상 속으로 들어온 우주 과학은 인류의 생활을 더욱 편리하고 풍요롭게 하고 있다.</p> -->
-	<!-- </div> -->
-	<!-- <ol> -->
-		<!-- <li>정수기가 우주인의 식수를 해결해 주었다.</li> -->
-		<!-- <li>동결 건조 식품은 바쁜 일반인들을 위해 개발되었다.</li> -->
-		<!-- <li>우주 과학 기술 덕분에 생활에 편리한 제품이 개발되었다. <strong class="correct">✓</strong></li> -->
-		<!-- <li>통신, 의료 분야에서 개발된 기술이 우주인들을 위해 사용되었다.</li> -->
-	<!-- </ol> -->
-<!-- </div> -->
-<!-- <div class="exam-question"> -->
-	<!-- <h3>33.</h3> -->
-	<!-- <ul> -->
-		<!-- <li><a href="uj/zajecia/24-25l/ljk5/zajecia/czytanie/1/img/보자기.jpg">보자기</a></li> -->
-		<!-- <li>싸다 - zawinąć</li> -->
-		<!-- <li>실용적 - użyteczny</li> -->
-		<!-- <li>용도 - zastosowanie</li> -->
-		<!-- <li>천 - materiał</li> -->
-		<!-- <li>조각 - kawałek (np. materiału)</li> -->
-		<!-- <li>바느질 - szycie</li> -->
-		<!-- <li>인정(을) 받다 - zdobyć uznanie</li> -->
-		<!-- <li>자유분방하다 - być beztroskim</li> -->
-		<!-- <li>조화 - harmonia</li> -->
-		<!-- <li>기원하다 - życzyć</li> -->
-		<!-- <li>정성 - całe serce</li> -->
-	<!-- </ul> -->
-	<!-- <div class="topik-textbox"> -->
-		<!-- <p>보자기는 물건을 싸는 실용적인 용도로 사용된다. 그중에서 쓰고 남은 천 조각으로 만든 것을 조각보라고 한다. 이 조각보를 만들 때는 쓰는 사람이 복을 받기를 바라는 마음으로 바느질을 한다. 이러한 조각보가 오늘날에는 예술적으로도 인정을 받고 있다. 색도, 모양도, 크기도 서로 다른 조각들을 이어 만든 조각보에는 자유분방한 아름다움과 조화로움이 살이 있기 때문이다.</p> -->
-	<!-- </div> -->
-	<!-- <ol> -->
-		<!-- <li>조각보는 실용성보다 예술성이 강조되어 있다.</li> -->
-		<!-- <li>조각보는 큰 천을 여러 조각으로 잘라서 만들었다.</li> -->
-		<!-- <li>조각보는 색이 같고 모양이 다른 조각이 이어져 있다.</li> -->
-		<!-- <li>조각보에는 복을 기원하는 정성스러운 마음이 담겨 있다. <strong class="correct">✓</strong></li> -->
-	<!-- </ol> -->
-<!-- </div> -->
+<div class="exam-question">
+	<h2>[32~34]. 다음을 읽고 내용이 같은 것을 고르십시오.</h2>
+	<h3>32.</h3>
+	<ul>
+		<li>위조 - fałszerstwo</li>
+		<li>방지하다 - zapobiec</li>
+		<li>수표 - czek</li>
+		<li>발행하다 - wyemitować (np. znaczki)</li>
+		<li>각도 - kąt</li>
+		<li>기존 - istniejący</li>
+		<li>선명하다 - być wyraźnym</li>
+		<li>고액권 - wysoki nominał</li>
+		<li>전산 - komputer</li>
+		<li>인출하다 - wypłacić (np. pieniądze z bankomatu)</li>
+		<li>금융 - finanse, bankowość</li>
+		<li>거래 - transakcja</li>
+	</ul>
+	<div class="topik-textbox">
+		<p>위조를 방지하기 위해 색깔과 디자인을 바꾼 수표가 곧 발행된다. 이 수표는 각도에 따라 문자의 색상이 뚜렷하게 바뀌며, 발행 번호의 색상도 기존 수표보다 더 선명하게 인쇄된다. 또한 고액권 수표는 이미지를 전산에 미리 등록하여 돈을 인출할 때 같은 수표인지를 확인하도록 했다. 이와 같은 수표의 발행으로 더욱 안전한 금융 거래를 할 수 있을 것으로 보인다.</p>
+	</div>
+	<ol>
+		<li>이 수표는 각도에 따라 발행 번호가 바뀐다.</li>
+		<li>이 수표는 이미지를 인쇄하여 위조를 막는다.</li>
+		<li>이 수표는 문자의 색상 변화를 통해 위조를 방지한다.</li>
+		<li>이 수표는 수표의 디자인을 개선하기 위해 만들어졌다.</li>
+	</ol>
+</div>
+<div class="exam-question">
+	<h3>33.</h3>
+	<ul>
+		<li>성분 - skład</li>
+		<li>외부 - zewnętrze</li>
+		<li>자극 - pobudzenie, stymulacja</li>
+		<li>세균 - bakteria</li>
+		<li>저항하다 - bronić się</li>
+		<li>단백질 - białko</li>
+		<li>항균 - przeciwbakteryjny</li>
+		<li>물질 - związek (np. chemiczny)</li>
+		<li>체내 - w ciele</li>
+		<li>쌓이다 - odkładać się</li>
+		<li>해롭다 - być szkodliwym</li>
+	</ul>
+	<div class="topik-textbox">
+		<p>눈물은 약 98%가 물로 이루어져 있다. 나머지 성분은 눈물을 흘리는 상황에 따라 달라진다. 먼지 같은 외부의 물리적 자극 때문에 흘리는 눈물에는 세균에 저항할 수 있는 단백질이 포함되어 있다. 슬플 때 흘리는 눈물에는 항균 물질뿐만 아니라 스트레스로 인해 체내에 쌓인 물질도 들어 있다. 그래서 슬플 때 울고 나면 신체에 해로운 물질이 몸 밖으로 나가 기분이 나아진 것 같은 느낌을 받는다.</p>
+	</div>
+	<ol>
+		<li>눈물 속에 있는 단백질은 기분을 좋게 만든다.</li>
+		<li>슬퍼서 흘리는 눈물에는 항균 물질이 빠져 있다.</li>
+		<li>슬플 때 흘리는 눈물 속에는 몸에 나쁜 물질이 포함되어 있다.</li>
+		<li>물리적 자극으로 흘리는 눈물이 슬플 때의 눈물보다 성분이 더 다양하다.</li>
+	</ol>
+</div>
 <!-- <div class="exam-question"> -->
 	<!-- <h3>34.</h3> -->
 	<!-- <ul> -->
-		<!-- <li>지시어 - wskazujące słowo (np. zaimek)</li> -->
-		<!-- <li>타인 = 다른 사람</li> -->
-		<!-- <li>공유하다 - współdzielić, dzielić się (czymś z kimś)</li> -->
-		<!-- <li>생후 - po urodzeniu</li> -->
-		<!-- <li>무렵 = 즈음</li> -->
-		<!-- <li>습득하다 = 배우다</li> -->
 	<!-- </ul> -->
 	<!-- <div class="topik-textbox"> -->
-		<!-- <p>아이가 ‘엄마’ 다음으로 빨리 배우는 말 중에는 ‘이것’과 같이 여러 물건을 가리키는 지시어가 있다. 지시어는 대화하는 상황을 타인과 공유해야 그 의미를 이해할 수 있다는 특성이 있다. 아기들은 이러한 지시어를 사용해 자연스럽게 부모의 관심을 끄는 것이다. 대부분의 아기들이 생후 12~18개월 무렵에 이런 지시어를 사용한다는 것은 이미 여러 언어 연구에서 밝혀진 바 있다.</p> -->
+		<!-- <p></p> -->
 	<!-- </div> -->
 	<!-- <ol> -->
-		<!-- <li>아기는 혼잣말을 할 때 지시어를 자주 사용한다.</li> -->
-		<!-- <li>아기는 엄마라는 단어보다 지시어를 먼저 습득한다.</li> -->
-		<!-- <li>지시어를 습득하는 시기는 언어권마다 다르게 나타난다.</li> -->
-		<!-- <li>지시어를 상대방과 상황을 공유해야 의미를 전달할 수 있다. <strong class="correct">✓</strong></li> -->
+		<!-- <li></li> -->
 	<!-- </ol> -->
 <!-- </div> -->
 
